# Practical-projects

./: LICENSE  README.md
Work4/: CMakeLists.txt  Entity.h  Game.h  Pacman.h  main.cpp
